[package]
name = "esm4"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = { version = "1.0.31", features = ["cloudflare_zlib"] }
log = "0.4.22"
nom = "7.1.3"
nom-derive = "0.10.1"
simplelog = "0.12.2"
proc = { path = "../proc" }
common = { version = "0.1.0", path = "../common" }
rayon = "1.10.0"
